[package]
name = "fun-with-neon"
version = "0.1.0"
authors = ["Max Nachlinger <mnachlinger@walmartlabs.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "fun_with_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.3"

[dependencies]
neon = "0.5.3"
